[project]
name = "action-surface"
version = "0.1.0"
description = "Input-modulated dose-response function fitting for optogenetics"
authors = [
    {name = "Author Name", email = "author@example.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.20",
    "pandas>=1.3",
    "scipy>=1.14",
    "matplotlib>=3.5",
    "seaborn>=0.11",
    "scikit-learn>=1.0",
    "patsy>=0.5",
    "pydantic>=2.0",
    "ipykernel>=6.30.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "jupyter>=1.0",
    "black>=22.0",
    "ruff>=0.1",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["action_surface"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.black]
line-length = 100
target-version = ["py39"]
